--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -96,9 +96,11 @@
    
 .filter-dropdown button{
     border: none;
-    font-weight: 400;
+    font-weight: 300;
     width:10rem;
     cursor: pointer;
+    background-color:rgb(79, 190, 224);
+    color: white;
 }
 
 
