--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 8%;
+    width: 15%;
     align-items: center;
 }
 
@@ -74,9 +74,19 @@
     color:#121213;
 }
 
+.wishlist a{
+    display: flex;
+    gap:0.2rem;
+    text-decoration: none;
+    color: #3d3f45;
+}
 
-.cart {
-   
+.wishlist p{
+    font-size: 1rem;
+}
+
+.wishlist i{
+    align-self: center;
 }
 
 .cart a {
